Add course pages and teacher module, edit student module

--- a/StudentCoursePage/index.html
+++ b/StudentCoursePage/index.html
@@ -1,1 +1,31 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Student Course Page</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">CodeMe</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="nav-item active ml-auto">
+            <span class="navbar-text">Signed in as: Jennifer Williams (Student)</span>
+        </div>
+    </nav>
+    
+    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+        <a href="{{site.baseurl}}/StudentModule" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #1: Datatypes</a>
+    </div>
+    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+        <a href="{{site.baseurl}}/StudentModule" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #2: Loops</a>
+    </div>
+    </body>
+</html>
 
