--- a/TeacherCoursePage/index.html
+++ b/TeacherCoursePage/index.html
@@ -1,1 +1,62 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Teacher Course Page</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">CodeMe</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="nav-item active ml-auto">
+            <span class="navbar-text">Signed in as: Justin Baker (Teacher)</span>
+        </div>
+    </nav>
+    
+    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+        <a href="{{site.baseurl}}/TeacherModule" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #1: Datatypes</a>
+    </div>
+    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+        <a href="{{site.baseurl}}/TeacherModule" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #2: Loops</a>
+    </div>
+
+    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+        <h4>Enrolled Students</h4>
+    </div>
+    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Modules Completed</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Jennifer</td>
+                <td>Williams</td>
+                <td>#1</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Hazel</td>
+                <td>Shibu</td>
+                <td>#1, #2</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    </body>
+</html>
+
 
