--- a/StudentModule/index.html
+++ b/StudentModule/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Code Creative</a>
+        <a class="navbar-brand" href="#">CodeMe</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,38 +30,46 @@
                 Modules
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Lesson #1: Datatypes</a>
-                <a class="dropdown-item" href="#">Lesson #2: Loops</a>
+                <a class="dropdown-item" href="{{site.baseurl}}/StudentModule">Module #1: Datatypes</a>
+                <a class="dropdown-item" href="{{site.baseurl}}/StudentModule">Module #2: Loops</a>
             </li>
             </ul>
         </div>
 
-        <div class="nav-item active my-2 my-lg-0">
+        <div class="nav-item active ml-auto">
             <span class="navbar-text">Signed in as: Jennifer Williams (Student)</span>
         </div>
     </nav>
-    <div class="btn-group">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Hint #1
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item">Are you going to need to loop here?</a>
-        </div>
+    <div class="col-md-12 text-center">
+        <h3>Module #2: Loops</h3> 
     </div>
-    <div class="btn-group">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Hint #2
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item">A for or while loop?</a>
-        </div>
+    <div class="col-md-12 text-center">
+        <h4>Prompt: Create a multi-color pattern of one shape that fills up the canvas.</h4>
     </div>
-    <div class="btn-group">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Hint #3
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item">How many times do you need to loop?</a>
+    <div class="col-md-12 text-center">
+        <div class="btn-group">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Hint #1
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item">Are you going to need to loop here?</a>
+            </div>
+        </div>
+        <div class="btn-group">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Hint #2
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item">A for or while loop?</a>
+            </div>
+        </div>
+        <div class="btn-group">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Hint #3
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item">How many times do you need to loop?</a>
+            </div>
         </div>
     </div>
     <script type="text/p5">
@@ -73,11 +81,32 @@
         background(255, 0, 200);
         }
     </script>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+    <!-- Button trigger modal -->
+    <div class="col-md-12 text-center">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#readyToCheckModal">
+            Ready to Check
+        </button>
+    </div>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="readyToCheckModal" tabindex="-1" role="dialog" aria-labelledby="readyToSubmitLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="readyToCheckLabel">Ready to Submit</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+            The teacher will be with you shortly. Please continue to look over your solution. 
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    
+    </body>
 </html>
