Update links and file structure

--- a/TeacherCoursePage/index.html
+++ b/TeacherCoursePage/index.html
@@ -21,10 +21,10 @@
     </nav>
     
     <div style="margin-bottom: 20px" class="col-md-12 text-center">
-        <a href="{{site.baseurl}}/TeacherModule" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #1: Datatypes</a>
+        <a href="https://jenwill394.github.io/TeamZero.github.io/TeacherModule/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #1: Datatypes</a>
     </div>
     <div style="margin-bottom: 20px" class="col-md-12 text-center">
-        <a href="{{site.baseurl}}/TeacherModule" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #2: Loops</a>
+        <a href="https://jenwill394.github.io/TeamZero.github.io/TeacherModule/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Module #2: Loops</a>
     </div>
 
     <div style="margin-bottom: 20px" class="col-md-12 text-center">
