--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-
+<!DOCTYPE html>
+<html>
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/p5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/addons/p5.dom.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/addons/p5.sound.min.js"></script>
-  <script src="//toolness.github.io/p5.js-widget/p5-widget.js"></script>
+	<meta charset="UTF-8">
+	<title>CodeMe - Learn Computer Science with Creative Programming Tasks</title>
+	<link rel="stylesheet" href="landing.css">
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <script type="text/p5">
-      function setup() {
-        createCanvas(100, 100);
-      }
-      
-      function draw() {
-        background(255, 0, 200);
-      }
-  </script>
+	<header>
+		<nav>
+			<div class="logo">
+				<a href="#">CodeMe</a>
+			</div>
+			<div class="menu">
+				<a href="login.html" class="login-button">Login/Sign Up</a>
+			</div>
+		</nav>
+	</header>
+	<main>
+		<div class="hero">
+			<h1 class="hero-text">Learn Computer Science with Creative Programming Tasks</h1>
+			<p class="hero-text">CodeMe is a unique learning platform that helps students learn computer science principles with interactive and creative programming tasks.</p>
+		</div>
+	</main>
 </body>
+</html>
