--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<h1>Login</h1>
-		<form action="studentPage.html" method="POST">
+		<form action="StudentCoursePage/index.html" method="POST">
 			<label for="username">Username</label>
 			<input type="text" id="username" name="username" required>
 			<label for="password">Password</label>
