Switch to accordion and fix page linking

--- a/StudentModule/index.html
+++ b/StudentModule/index.html
@@ -36,8 +36,8 @@
                 Modules
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{site.baseurl}}/StudentModule">Module #1: Datatypes</a>
-                <a class="dropdown-item" href="{{site.baseurl}}/StudentModule">Module #2: Loops</a>
+                <a class="dropdown-item" href="https://jenwill394.github.io/TeamZero.github.io/StudentModule/">Module #1: Datatypes</a>
+                <a class="dropdown-item" href="https://jenwill394.github.io/TeamZero.github.io/StudentModule/">Module #2: Loops</a>
             </li>
             </ul>
         </div>
