--- a/TeacherCoursePage/index.html
+++ b/TeacherCoursePage/index.html
@@ -30,7 +30,7 @@
     <div style="margin-bottom: 20px" class="col-md-12 text-center">
         <h4>Enrolled Students</h4>
     </div>
-    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+    <div style="margin-bottom: 20px;width: 75%;margin-left: 12.5%" class="col-md-12 text-center">
         <table class="table">
             <thead>
             <tr>
