--- a/TeacherModule/index.html
+++ b/TeacherModule/index.html
@@ -6,22 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Processing Widget -->
+    <!-- Processing Widget
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/addons/p5.sound.min.js"></script>
-    <script src="//toolness.github.io/p5.js-widget/p5-widget.js"></script>
+    <script src="//toolness.github.io/p5.js-widget/p5-widget.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <title>Teacher Module</title>
   </head>
   <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">CodeMe</a>
@@ -36,8 +32,8 @@
                 Modules
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{site.baseurl}}/TeacherModule">Module #1: Datatypes</a>
-                <a class="dropdown-item" href="{{site.baseurl}}/TeacherModule">Module #2: Loops</a>
+                <a class="dropdown-item" href="https://jenwill394.github.io/TeamZero.github.io/TeacherModule/">Module #1: Datatypes</a>
+                <a class="dropdown-item" href="https://jenwill394.github.io/TeamZero.github.io/TeacherModule/">Module #2: Loops</a>
             </li>
             </ul>
         </div>
@@ -56,44 +52,70 @@
         <h4>Prompt: Create a multi-color pattern of one shape that fills up the canvas.</h4>
     </div>
 
-    <div class="col-md-12 text-center">
-        <div id="lessonPlan" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-            <li data-target="#lessonPlan" data-slide-to="0" class="active"></li>
-            <li data-target="#lessonPlan" data-slide-to="1"></li>
-            <li data-target="#lessonPlan" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-            <div class="d-block w-100" style="background-color:  rgba(128, 128, 128, 0.568);" class="carousel-item active">
-                <h5>
-                    There are multiple types of ways to loop in Processing. One way is to use a <code>for</code> loop. 
-                    The setup for this is <code>for(var i = 0; i < 10; i++)</code>. The first part initializes the variable i to a value of 0.
-                    The second part is a conditional, where every time it loops it will check if this value is true and exit the loop if not. 
-                    The last statement occurs every time the loops is done and will increment the variable i. The loop will run 10 times. 
-                </h5>
+    <div style="width: 75%;margin-left: 12.5%;margin-bottom: 10px;" class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <strong>What’s a loop?</strong>
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    A block of code that can be executed more than once in a row. When we see that a process has to repeat multiple times in a row, we write a loop. 
+                    Loops allow us to create efficient code that automates processes to make scalable, manageable programs. 
+                    They perform repetitive tasks so that we as programmers don’t need to code those tasks manually each time.
+                </div>
             </div>
-            <div style="background-color: rgba(128, 128, 128, 0.568);"class="carousel-item">
-                <h5>
-                    In order to make a pattern in Processing, you could combine loops with shapes like <code>rect()</code> or <code>ellipse()</code>.
-                </h5>
+        </div>
+        <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <strong>Parts of a Loop</strong>
+            </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                Every loop has three parts:
+                <ol>
+                    <li>Initialization: we set a starting condition for our loop here. This part is only executed once at the beginning of the loop.</li>
+                    <li>Condition: in each iteration of the loop, we check the truth value of the condition. If the condition is true, the loop continues to run; otherwise, we exit the loop.</li>
+                    <li>Update: each time the loop runs, we update our state (otherwise, nothing changes and we’ll be stuck in our loop forever!). Often, loops will increment or decrement a loop counter for the update step.</li>    
+                </ol>
             </div>
-            <div style="background-color:  rgba(128, 128, 128, 0.568);" class="carousel-item">
-                <h5>
-                    See below an example of how you can create a multi-color pattern by clicking play.
-                </h5>
+        </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <strong>For Loop</strong>
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    The <code>for</code> loop is a loop that does something a specified number of times.
+
+                    Here is what a for loop looks like:
+                    <pre><code>
+                        for (initialize; condition; update) { 
+                            statements 
+                        }
+                    </code></pre>
+                    More concretely, we might have a for loop that looks like this:
+                    <pre><code>
+                        for (var i = 0; i < 3; i += 1) { 
+                            print “hello world”
+                        }
+                    </code></pre>
+                    Here, we initialize a counter i, which increments by 1 every time the loop runs. Our loops runs as  i is less than 3, and each time the loop repeats, the program prints out “hello world.” 
+                    At then end, “hello world” will be printed three times in the output console.
+                    
+                    Watch out for infinite loops! If the condition always evaluates for true, then the loop never terminates. For example, if we don’t have an update, then the condition is never met:
+                    <code>x = 1; while x < 5 {print x}</code>
+                    
+                </div>
             </div>
-            </div>
-            <a class="carousel-control-prev" href="#lessonPlan" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#lessonPlan" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
         </div>
     </div>
-
    
     <script type="text/p5">
         function setup() {
@@ -112,7 +134,7 @@
     <div style="margin-bottom: 20px" class="col-md-12 text-center">
         <h4>Student Progress</h4>
     </div>
-    <div style="margin-bottom: 20px" class="col-md-12 text-center">
+    <div style="margin-bottom: 20px;width: 75%;margin-left: 12.5%" class="col-md-12 text-center">
         <table class="table">
             <thead>
             <tr>
