--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<h1>Login</h1>
-		<form action="StudentCoursePage/" method="POST">
+		<form target="_blank" action="https://jenwill394.github.io/TeamZero.github.io/StudentCoursePage/" method="GET">
 			<label for="username">Username</label>
 			<input type="text" id="username" name="username" required>
 			<label for="password">Password</label>
